// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Iframe Component renders with optional attributes 1`] = `
<div>
  



  <iframe
    class="ct-iframe ct-theme-dark ct-vertical-spacing-inset--both ct-iframe--with-background custom-class"
    data-test="true"
    height="400"
    src="https://example.com"
    width="600"
  />
  

</div>
`;

exports[`Iframe Component renders with required attributes 1`] = `
<div>
  



  <iframe
    class="ct-iframe ct-theme-light   "
    src="https://example.com"
  />
  

</div>
`;
